src/objects/PageConfig__c.object
<CustomObject>
    <description>this holds information about various Page configs for a specific AppSettings</description>
    <fields>
        <fullName>AppSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AppSetting</label>
        <referenceTo>AppSettings__c</referenceTo>
        <relationshipLabel>PageConfigs</relationshipLabel>
        <relationshipName>PageConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackGround_Color__c</fullName>
        <label>BackGround Color</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataBinding__c</fullName>
        <label>DataBinding</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is POS Page Config is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageConfigTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageConfigTypeId</label>
        <referenceTo>PageConfigType__c</referenceTo>
        <relationshipLabel>PageConfigs</relationshipLabel>
        <relationshipName>PageConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XCoordinate__c</fullName>
        <label>XCoordinate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YCoordinate__c</fullName>
        <label>YCoordinate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PageConfig</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PageConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>